Adjust toggler and make sure that scrollbar is always visible

--- a/include/style.css
+++ b/include/style.css
@@ -1,5 +1,10 @@
 @media all
 {
+	body
+	{
+		overflow-y: scroll;
+	}
+
 	.hide, [hidden]
 	{
 		display: none !important;
